--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerButtonsControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerButtonsControl.xaml
@@ -7,7 +7,15 @@
             x:DataType="player:PlayerViewModel"
             HeightRequest="66"
             >
-
+    
+    <Button Text="{Binding SeekSizeViewModel.RewindSize, Converter={StaticResource TimeSpanToSeekSizeStringConverter}}"
+            TextColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}"
+            Command="{Binding RewindCommand}"
+            Style="{StaticResource TextPlayerButton}"
+            IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
+            Margin="{OnPlatform Default=0, WinUI='8,0,0,0'}"
+            />
+    
     <ImageButton Command="{Binding GoToPreviousCommand}"
                  Style="{x:StaticResource PlayerButton}"
                  Source="{StaticResource Previous}"
@@ -27,5 +35,12 @@
                  Source="{StaticResource PlayList}"
                  IsVisible="{Binding HasPlayList}" 
                  />
-    
+
+    <Button Text="{Binding SeekSizeViewModel.ForwardSize, Converter={StaticResource TimeSpanToSeekSizeStringConverter}}"
+            TextColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}"
+            Command="{Binding ForwardCommand}"
+            Style="{StaticResource TextPlayerButton}"
+            IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
+            />
+
 </HorizontalStackLayout>
