--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -233,6 +233,20 @@
                 Size="16"/>
 
             <FontImageSource
+                x:Key="Rewind"
+                FontFamily="{StaticResource DefaultIconFont}"
+                Glyph="{OnPlatform WinUI={x:Static style:SegoeIconFont.Rewind}, Default={x:Static style:IconFont.Backward}}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                Size="16"/>
+
+            <FontImageSource
+                x:Key="Forward"
+                FontFamily="{StaticResource DefaultIconFont}"
+                Glyph="{OnPlatform WinUI={x:Static style:SegoeIconFont.FastForward}, Default={x:Static style:IconFont.Forward}}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                Size="16"/>
+
+            <FontImageSource
                 x:Key="Previous"
                 FontFamily="{StaticResource DefaultIconFont}"
                 Glyph="{OnPlatform WinUI={x:Static style:SegoeIconFont.BackSolidBold}, Default={x:Static style:IconFont.StepBackward}}"
