--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramsPage.xaml
@@ -89,6 +89,7 @@
             </CollectionView>
         </RefreshView>
 
+        <views:PlayerControlMargin Grid.Row="2" />
         <views:PlayerControl Grid.Row="0" Grid.RowSpan="3" x:Name="PlayerControl" />
     </Grid>
         
