--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeDetailsPage.xaml
@@ -254,6 +254,7 @@
             </ScrollView>
         </RefreshView>
 
+        <views:PlayerControlMargin Grid.Row="1" />
         <views:PlayerControl Grid.Row="0" Grid.RowSpan="2" x:Name="PlayerControl" />
     </Grid>
 </ContentPage>
