--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramDetailsPage.xaml
@@ -252,6 +252,7 @@
                 Text="{x:Static r:Strings.Episodes_GetAll}" />
         </Grid>
 
+        <views:PlayerControlMargin Grid.Row="2" />
         <views:PlayerControl Grid.Row="0" Grid.RowSpan="3" x:Name="PlayerControl" />
     </Grid>
 
