--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
@@ -34,59 +34,74 @@
               Grid.ColumnSpan="3"
               IsVisible="{Binding IsMenuOpen}">
 
-            <Grid RowDefinitions="auto, auto" ColumnDefinitions="auto, *, auto">
+            <Picker 
+                Grid.Row="0"
+                Grid.ColumnSpan="3"
+                ItemsSource="{Binding SleepTimes}"
+                SelectedIndex="{Binding SleepTimeIndex, Mode=TwoWay}"
+                Margin="{OnPlatform Default='0,6,0,0', WinUI='0,6,0,0'}"
+                IsVisible="{Binding IsSleepTimerNotRunning}"
+                />
 
-                <Grid.GestureRecognizers>
-                    <TapGestureRecognizer />
-                </Grid.GestureRecognizers>
+            <Button 
+                Grid.Column="0"
+                Text="{x:Static r:Strings.SleepTimer_Decrease_5min}"
+                Style="{StaticResource HyperlinkButton}"
+                HorizontalOptions="Start" 
+                Margin="0,0,8,0"
+                HeightRequest="50"
+                Command="{Binding DecreaseSleepTimerCommand}"
+                IsVisible="{Binding IsSleepTimerRunning}"
+                />
 
-                <Picker 
-                    Grid.Row="0"
-                    Grid.ColumnSpan="3"
-                    ItemsSource="{Binding SleepTimes}"
-                    SelectedIndex="{Binding SleepTimeIndex, Mode=TwoWay}"
-                    Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
-                    IsVisible="{Binding IsSleepTimerNotRunning}"
-                    />
+            <Grid 
+                Grid.Row="0"
+                Grid.Column="1"
+                HeightRequest="50"
+                RowDefinitions="auto, auto"
+                IsVisible="{Binding IsSleepTimerRunning}"
+                >
+                    
+                <Label Padding="0,4,0,0"
+                        Text="{Binding SleepTimerText}"
+                        FontSize="18"
+                        Style="{StaticResource HyperlinkLabelDetailedStyle}"
+                        HorizontalTextAlignment="Center"
+                        />
+
+                <Label Grid.Row="1"
+                        Padding="0,0,0,4"
+                        Text="{x:Static r:Strings.Player_MenuSleepTimer_Disable}"
+                        Style="{StaticResource HyperlinkLabelDetailedStyle}"
+                        HorizontalTextAlignment="Center"
+                        />
 
                 <Button 
-                    Grid.Row="0"
-                    Grid.ColumnSpan="3"
+                    Grid.RowSpan="2"
                     Style="{StaticResource HyperlinkButton}"
-                    Text="{Binding StopSleepTimerText}" 
-                    HorizontalOptions="Start" 
+                    HeightRequest="50"
+                    HorizontalOptions="FillAndExpand" 
+                    VerticalOptions="StartAndExpand"
                     Command="{Binding StopSleepTimerCommand}"
                     IsVisible="{Binding IsSleepTimerRunning}"
                     />
-
-                <Button 
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Style="{StaticResource HyperlinkButton}"
-                    Text="{x:Static r:Strings.SleepTimer_Increase_5min}"
-                    HorizontalOptions="Start" 
-                    Margin="0,0,0,0"
-                    Command="{Binding IncreaseSleepTimerCommand}"
-                    IsVisible="{Binding IsSleepTimerRunning}"
-                    />
-
-                <Button 
-                    Grid.Row="1"
-                    Grid.Column="2"
-                    Text="{x:Static r:Strings.SleepTimer_Decrease_5min}"
-                    Style="{StaticResource HyperlinkButton}"
-                    HorizontalOptions="Start" 
-                    Margin="8,0,0,0"
-                    Command="{Binding DecreaseSleepTimerCommand}"
-                    IsVisible="{Binding IsSleepTimerRunning}"
-                    />
-
             </Grid>
+
+            <Button 
+                Grid.Column="2"
+                Style="{StaticResource HyperlinkButton}"
+                Text="{x:Static r:Strings.SleepTimer_Increase_5min}"
+                HorizontalOptions="Start" 
+                Margin="4,0,0,0"
+                HeightRequest="50"
+                Command="{Binding IncreaseSleepTimerCommand}"
+                IsVisible="{Binding IsSleepTimerRunning}"
+                />
 
             <Picker Grid.Column="4"
                     ItemsSource="{Binding PlaybackRateOptions}"
                     SelectedIndex="{Binding PlaybackRateIndex, Mode=TwoWay}"
-                    Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
+                    Margin="{OnPlatform Default='0,6,0,0', WinUI='0,6,0,0'}"
                     IsVisible="{Binding IsCurrentItemEpisode}"
                     />
         </Grid>
