--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
@@ -165,10 +165,10 @@
                 Source="{Binding CanPause, Converter={StaticResource BoolToPlayPause}}"
                 />
 
-            <Button 
+            <!--<Button 
                 Command="{Binding PlayPauseCommand}"
                 Style="{StaticResource TextPlayerButton}"
-            />
+            />-->
         </Grid>
 
 
