Fixes bad binding.

--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/UserControls/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/UserControls/PlayerControl.xaml
@@ -57,7 +57,7 @@
                 />
 
             <Button Grid.Column="0" 
-                Content="{Binding StopSleepTimerText}" 
+                Content="{Binding SleepTimerText}" 
                 Command="{Binding StopSleepTimerCommand}"
                 Visibility="{Binding IsSleepTimerRunning, Converter={StaticResource BoolToVisibilityConverter}}"
                 />
