--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/Player/PlaylistWindow.xaml
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/Player/PlaylistWindow.xaml
@@ -26,7 +26,7 @@
             x:Name="ListViewEpisodes"
             Grid.Row="3"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-            ItemsSource="{Binding Episodes}"
+            ItemsSource="{Binding Items}"
             Visibility="{Binding HasData, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
             Padding="4"
             dd:DragDrop.IsDragSource="True"
